# chatwoot-zzap-integration

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.example.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_unique_outbound_jobs.py
app/: asgi.py  cli.py  settings.py
app/api/: health.py  webhooks.py
app/clients/: chatwoot.py  zzap.py
app/db/: alembic_config.py  base.py  models.py  repositories.py  session.py
app/services/: attachments.py  fingerprinting.py  inbound.py  outbound.py  readiness.py  webhooks.py
app/workers/: cleanup.py  jobs.py  locks.py  rate_limit.py  zzap_scheduler.py
docs/superpowers/plans/: 2026-07-03-zzap-chatwoot-integration-implementation.md
docs/superpowers/specs/: 2026-07-03-zzap-chatwoot-integration-design.md
scripts/: docker-entrypoint.sh
tests/unit/: test_alembic_config.py  test_attachments.py  test_chatwoot_client.py  test_cli.py  test_fingerprinting.py  test_health.py  test_inbound_service.py  test_initial_migration.py  test_job_claiming.py  test_job_retry.py  test_outbound_service.py  test_rate_limit.py  test_readiness.py  test_settings.py  test_webhook_security.py  test_webhook_service.py  test_zzap_client.py  test_zzap_scheduler.py
